--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,12 @@
 [project]
 name = "ccss"
-version = "0.1.0"
+version = "0.2.1"
 description = "Claude Code Session Search - TUI for searching session history"
 readme = "README.md"
 authors = [
     { name = "Steve Antonakakis", email = "steve.antonakakis@gmail.com" }
 ]
+license = "MIT"
 requires-python = ">=3.13"
 dependencies = [
     "textual>=0.89.1",
@@ -15,7 +16,9 @@ dependencies = [
 
 [project.scripts]
 ccss = "ccss.cli:main"
+ccss-dev = "ccss.dev:main"
 ccss-demo = "ccss.demo:main"
+ccss-build = "ccss.scripts.build:main"
 
 [build-system]
 requires = ["uv_build>=0.8.15,<0.9.0"]
@@ -39,4 +42,6 @@ dev = [
     "pytest>=9.0.2",
     "pytest-asyncio>=1.3.0",
     "pytest-rerunfailures>=16.1",
+    "pyinstaller>=6.0.0",
+    "textual-dev>=1.7.0",
 ]
