build: install to /usr/local/bin with dynamic versioning (v0.2.4)
- Change install path from /opt/bin to /usr/local/bin (FHS compliant)
- Auto-create install directory with sudo if needed
- Detect user shell (zsh/bash) and update appropriate rc file
- Add /usr/local/bin to PATH only if not already present
- Switch from uv_build to hatchling for dynamic version support
- Version now sourced from src/ccss/__init__.py

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "ccss"
-version = "0.2.3"
+dynamic = ["version"]
 description = "Claude Code Session Search - TUI for searching session history"
 readme = "README.md"
 authors = [
@@ -19,8 +19,8 @@ ccss = "ccss.cli:main"
 ccss-demo = "ccss.demo:main"
 
 [build-system]
-requires = ["uv_build>=0.8.15,<0.9.0"]
-build-backend = "uv_build"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
 [tool.ruff]
 line-length = 100
@@ -43,3 +43,6 @@ dev = [
     "pyinstaller>=6.0.0",
     "textual-dev>=1.7.0",
 ]
+
+[tool.hatch.version]
+path = "src/ccss/__init__.py"
