--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,14 +29,12 @@ target-version = "py313"
 [tool.ruff.lint]
 select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
 
-[tool.pyright]
-pythonVersion = "3.13"
-typeCheckingMode = "strict"
-reportMissingTypeStubs = false
+[tool.ruff.format]
+docstring-code-format = true
 
 [dependency-groups]
 dev = [
-    "pyright>=1.1.407",
+    "ruff>=0.9.0b1",
     "pytest>=9.0.2",
     "pytest-asyncio>=1.3.0",
     "pytest-rerunfailures>=16.1",
